--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,47 @@
-version: "2.2"
+
+
+version: "3.3"
 services:
-  api-demanda:
-    build:
+  myapp-modulo-1:
+    container_name: myapp-modulo-1
+    image: myapp-modulo:v1
+    build: 
       context: .
-      dockerfile: Dockerfile
     ports:
-      - "4000:4000"  
-    volumes:
-      - .:/app  
-      - /app/node_modules 
+      - "6058:4000"
+    links:
+      - mongodb
+    networks:
+      - mynetwork
+  myapp-modulo-2:
+    container_name: myapp-modulo-2
+    image: myapp-modulo:v1
+    build: 
+      context: .
+    ports:
+      - "6059:4000"
+    links:
+      - mongodb
+    networks:
+      - mynetwork
+  balanceador-modulo-1:
+    container_name: balanceador-modulo-1
+    image: balanceador-modulo-1:v1
+    build: 
+      context: ./Tools
+    ports:
+      - "6061:80"
+    networks:
+      - mynetwork
+  mongodb:
+    image: mongo
+    ports:
+      - "27017:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: admin
+    networks:
+      - mynetwork
+
+networks:
+  mynetwork:
